--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,55 @@
-.DS_Store
+# Dependencies
 node_modules
-.vscode/
 
+# Production build
+.next
+out
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Logs and debugging
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Cache and temp files
+.vercel
+.DS_Store
+
+# TypeScript
+*.tsbuildinfo
+
+# IDEs and editors
+.idea
+.project
+.classpath
+*.launch
+.settings/
+
+# Other
+*.log
+*.pyc
+*.swp
+.eslintcache
+
+# Next.js build output
+.next
+out
+next.config.js
+
+# Lock files
+package-lock.json
+yarn.lock
+
+# Miscellaneous
+.cache
+.vscode/
 ethereum/build/Campaign.json
 ethereum/build/CampaignFactory.json
-
 keys.js
 ADDRESS
