--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-    "name": "kickstart",
+    "name": "crowd-coin",
     "version": "1.0.0",
-    "description": "",
+    "description": "Global crowdfunding platform powered by web3.",
     "main": "index.js",
     "scripts": {
-        "test": "mocha"
+        "test": "mocha",
+        "dev": "next dev"
     },
     "author": "",
     "license": "ISC",
@@ -13,6 +14,9 @@
         "fs-extra": "^11.1.1",
         "ganache": "^7.9.1",
         "mocha": "^10.2.0",
+        "next": "^12.3.4",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
         "solc": "^0.4.17",
         "web3": "^4.1.2"
     }
